# fitlyzerC

./: CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  resources.qrc
.github/workflows/: build.yml
resources/icons/: appicon.icns
resources/linux/: FitlyzerC.desktop
scripts/: package.cmake
src/: fitlyzerC.cpp
src/analysis/: ClimbDetector.cpp  ClimbDetector.h  ClimbMetrics.cpp  ClimbMetrics.h  FTPZones.cpp  FTPZones.h  IntervalDetector.cpp  IntervalDetector.h  PowerCurve.cpp  PowerCurve.h  SmoothingEngine.cpp  SmoothingEngine.h  TrainingLoad.cpp  TrainingLoad.h  TrainingMetrics.cpp  TrainingMetrics.h  WorkoutAnalyzer.cpp  WorkoutAnalyzer.h
src/analysis/climb/: ClimbCandidateFinder.cpp  ClimbCandidateFinder.h  ClimbClassifier.cpp  ClimbClassifier.h  ClimbMerger.cpp  ClimbMerger.h
src/analysis/queue/: AnalysisQueue.cpp  AnalysisQueue.h  AnalysisWorker.cpp  AnalysisWorker.h
src/charts/: FitnessChartWidget.cpp  FitnessChartWidget.h  Metric.h  PowerCurveWidget.cpp  PowerCurveWidget.h  PowerHistogramWidget.cpp  PowerHistogramWidget.h  RideChartWidget.cpp  RideChartWidget.h
src/charts/data/: RideChartDataBuilder.cpp  RideChartDataBuilder.h
src/charts/rendering/: RideChartRenderer.cpp  RideChartRenderer.h
src/charts/selection/: RideChartSelectionManager.cpp  RideChartSelectionManager.h
src/core/: ActivityAnalysisFlags.h  AnalysisVersions.h
src/core/settings/: AppSettings.cpp  AppSettings.h  DateFormatter.cpp  DateFormatter.h
src/core/undo/: ClimbEditCommand.cpp  ClimbEditCommand.h  UndoCommand.h  UndoManager.cpp  UndoManager.h
src/core/zones/: ColorProvider.cpp  ColorProvider.h  ZoneCalculator.cpp  ZoneCalculator.h  ZoneDefinition.cpp  ZoneDefinition.h
src/database/: ActivityAnalysisCacheRepository.cpp  ActivityAnalysisCacheRepository.h  ActivityAnalysisSettingsRepository.cpp  ActivityAnalysisSettingsRepository.h  ActivityRepository.cpp  ActivityRepository.h  AthleteRepository.cpp  AthleteRepository.h  ClimbRepository.cpp  ClimbRepository.h  DatabaseConnectionGuard.cpp  DatabaseConnectionGuard.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseSchema.cpp  DatabaseSchema.h  ImportRepository.cpp  ImportRepository.h  IntervalRepository.cpp  IntervalRepository.h  SqlQueryHelper.h
src/database/connection/: DatabaseConnectionFactory.cpp  DatabaseConnectionFactory.h
src/database/migrations/: DatabaseMigrationManager.cpp  DatabaseMigrationManager.h
src/fit/: FitParser.cpp  FitParser.h  FitRecordListener.cpp  FitRecordListener.h  RideData.h
src/gui/: AboutDialog.cpp  AboutDialog.h  ActivityBrowser.cpp  ActivityBrowser.h  AthleteDialog.cpp  AthleteDialog.h  AthleteHeaderWidget.cpp  AthleteHeaderWidget.h  AthleteListDialog.cpp  AthleteListDialog.h  CalendarWidget.cpp  CalendarWidget.h  CreateDatabaseDialog.cpp  CreateDatabaseDialog.h  EditActivityDialog.cpp  EditActivityDialog.h  EditNotesDialog.cpp  EditNotesDialog.h  ImportStatusWidget.cpp  ImportStatusWidget.h  IntervalEditorDialog.cpp  IntervalEditorDialog.h  MainWindow.cpp  MainWindow.h  MainWindowAthlete.cpp  MainWindowChartActions.cpp  MainWindowCharts.cpp  MainWindowClimbInteractions.cpp  MainWindowClimbViews.cpp  MainWindowContext.cpp  MainWindowDatabase.cpp  MainWindowDetection.cpp  MainWindowImport.cpp  MainWindowIntervals.cpp  MainWindowReadiness.cpp  MainWindowStatus.cpp  MainWindowUi.cpp  MainWindowUiBuild.cpp  MainWindowVideo.cpp  MainWindowWatch.cpp  (+8 more)
src/gui/controllers/: ActivityViewController.cpp  ActivityViewController.h  ChartController.cpp  ChartController.h  ImportController.cpp  ImportController.h  MainWindowActions.cpp  MainWindowActions.h  MapController.cpp  MapController.h  NavigationController.cpp  NavigationController.h
src/gui/pages/: ActivitiesPage.cpp  ActivitiesPage.h  BasePage.h  CalendarPage.cpp  CalendarPage.h  ChartsPage.cpp  ChartsPage.h  ClimbsPage.cpp  ClimbsPage.h  FitnessPage.cpp  FitnessPage.h  IntervalsPage.cpp  IntervalsPage.h  PlaceholderPage.h  PowerPage.cpp  PowerPage.h  VideoPage.cpp  VideoPage.h
src/import/: ImportJob.cpp  ImportJob.h  ImportProgressModel.cpp  ImportProgressModel.h  ImportQueue.cpp  ImportQueue.h  ImportWorker.cpp  ImportWorker.h
src/maps/: MapFitMath.cpp  MapFitMath.h  MapRenderer.cpp  MapRenderer.h  TileCache.cpp  TileCache.h
src/maps/cache/: DiskTileCache.cpp  DiskTileCache.h  GpsCacheBuilder.cpp  GpsCacheBuilder.h
src/maps/network/: TileDownloader.cpp  TileDownloader.h
src/maps/providers/: TileProviderRegistry.cpp  TileProviderRegistry.h
src/maps/rendering/: RouteColorizer.cpp  RouteColorizer.h
src/model/: RideDataLoader.cpp  RideDataLoader.h  RideDataSerializer.cpp  RideDataSerializer.h
src/platform/: Platform.cpp  Platform.h  Platform_linux.cpp  Platform_macos.cpp  Platform_windows.cpp
src/utils/: FfmpegPath.cpp  FfmpegPath.h  UuidGenerator.h
src/video/: VideoExportDialog.cpp  VideoExportDialog.h  VideoExportSettings.h  VideoRenderJob.cpp  VideoRenderJob.h  VideoTileProvider.cpp  VideoTileProvider.h
src/video/encoding/: VideoEncoder.cpp  VideoEncoder.h
src/video/overlay/: OverlayRenderer.cpp  OverlayRenderer.h
src/video/rendering/: VideoRenderer.cpp  VideoRenderer.h
src/workouts/: WorkoutPersistenceService.cpp  WorkoutPersistenceService.h
